--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-pdf/renderer": "^3.0.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
+    "file-loader": "^6.2.0",
     "framer-motion": "^7.6.5",
     "next": "13.0.2",
     "react": "18.2.0",
